--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -12,11 +12,19 @@ header {
   background-color: rgba(10, 7, 11, var(--opacity));
   color: white;
 
+  @media screen and (max-width: 768px) {
+    min-height: 60px;
+  }
+
   .content-header {
     width: 100%;
     display: flex;
     justify-content: space-between;
     margin: 0px 30px;
+
+    @media screen and (max-width: 768px) {
+      justify-content: center;
+    }
 
     .left-container {
       height: 100%;
@@ -31,6 +39,10 @@ header {
         gap: 10px;
         margin-right: 50px;
         cursor: pointer;
+
+        @media screen and (max-width: 768px) {
+          display: none;
+        }
 
         * {
           cursor: pointer;
@@ -109,6 +121,15 @@ header {
       display: flex;
       justify-content: center;
       gap: 10px;
+
+      @media screen and (max-width: 768px) {
+        width: 100%;
+
+        .search-wrapper,
+        input {
+          width: 100%;
+        }
+      }
 
       .search-wrapper {
         position: relative;
