--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -1,137 +1,141 @@
-.search-wrapper-results {
-  position: fixed;
-  width: 100vw;
-  height: 100%;
-  left: 0;
-  top: 1000vh;
-  background: var(--black-400);
-  z-index: -1;
-  opacity: 0.95;
-  filter: blur(1);
-  transition: all 0.5s;
+.search-results-wrapper {
+  position: absolute;
+  width: calc(100% + 100px);
+  background-color: var(--black-300);
+  right: 0;
+  top: 50px;
+  border-radius: 6px;
   overflow: auto;
+  transition: all 0.8s;
+  max-height: 0vh;
+
+  @media screen and (max-width: 768px) {
+    width: 100%;
+  }
 
   &.show {
-    top: 0vh;
+    border: 2px solid var(--black-200);
+    max-height: 80vh;
 
-    .close-search-container {
-      width: 45px;
-      height: 45px;
-      border-radius: 90px;
-      position: absolute;
-      left: 10px;
-      top: 10px;
-      background-color: white;
-      transition: all 0.5s;
+  }
 
-      &:hover::before {
-        background-color: var(--black-200);
-      }
+  .block-content {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    z-index: 2;
+    pointer-events: none;
+  }
 
-      &::before {
-        content: '';
-        position: absolute;
-        width: 30px;
-        height: 30px;
-        cursor: pointer;
-        top: calc(50% - 15px);
-        left: calc(50% - 15px);
-        background-color: var(--black-400);
-        mask-image: url(./../../assets/icons/close.svg);
-        mask-repeat: no-repeat;
-        mask-size: contain;
-        mask-position: center;
-      }
-    }
+  .search-results {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 30px;
+    padding: 20px;
 
-    .content-search-selector {
-      position: relative;
-      top: 65px;
+    .section {
       display: flex;
       flex-direction: column;
-      align-items: center;
-      justify-content: center;
+      gap: 12px;
 
-      .list-search {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
+      h3 {
+        font-weight: 400;
+        font-size: clamp(17px, 2vw, 22px);
       }
 
-      .results-content {
-        position: relative;
-        padding: 20px;
+      .items {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
 
-        .type-result-header {
-          display: flex;
-
-
-          .type-results {
+        .item-search {
+          .data-search-item {
             display: flex;
-            gap: 40px;
-            font-size: clamp(17px, 2vw, 25px);
+            gap: 10px;
+            border-radius: 5px;
+            transition: all 0.5s;
+            padding: 4px;
+            cursor: pointer;
 
-            .hover-effect {
-              text-decoration: underline;
-              color: var(--brand-color-1);
+            &:hover {
+              background-image: linear-gradient(90deg, var(--brand-color-1) 0%, var(--brand-color-4) 90%);
+              position: relative;
+
+              * {
+                z-index: 1;
+              }
+
+              &::before {
+                content: "";
+                border-radius: 5px;
+                position: absolute;
+                width: calc(100% - 4px);
+                height: calc(100% - 4px);
+                top: 2px;
+                left: 2px;
+                background-color: var(--black-200);
+                z-index: 0;
+
+              }
             }
 
-            span {
-              position: relative;
-              cursor: pointer;
-              transition: all 0.5s;
+            .img-preview {
+              min-width: 84px;
+              height: 118px;
+              max-width: 120px;
+              border: 2px solid var(--black-200);
+              border-radius: 5px;
+              overflow: hidden;
 
-              &.active {
-                @extend .hover-effect;
+              &.placeholder {
+                background-color: var(--black-100);
+                position: relative;
+
+                &::before {
+                  content: '';
+                  mask-image: url(./../../assets/icons/person.svg);
+                  position: absolute;
+                  height: 55px;
+                  width: 55px;
+                  top: calc(50% - (55px /2));
+                  left: calc(50% - (55px /2));
+                  mask-size: contain;
+                  mask-position: center;
+                  background-color: var(--black-300);
+                  mask-repeat: no-repeat;
+                }
               }
 
-              &:hover {
-                @extend .hover-effect;
-                filter: brightness(2);
+              img {
+                max-width: 80px;
+              }
+            }
+
+            .overview-search-item {
+              display: flex;
+              flex-direction: column;
+              gap: 5px;
+
+              strong,
+              span {
+                display: -webkit-box;
+                -webkit-line-clamp: 3;
+                -webkit-box-orient: vertical;
+                overflow: hidden;
+                text-overflow: ellipsis;
               }
 
+              strong {
+                -webkit-line-clamp: 2;
 
-              &:not(:last-child)::after {
-                content: '/';
-                color: white;
-                pointer-events: none;
-                position: absolute;
-                left: calc(100% + 25%);
               }
             }
           }
         }
       }
     }
-
   }
-
-  &.no-results {
-    padding-top: 0px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 40px;
-    justify-content: center;
-
-    &::before {
-      content: '';
-      background-color: white;
-      width: 50%;
-      max-width: 500px;
-      max-height: 400px;
-      mask-image: url(./../../assets/icons/not-found.svg);
-      mask-repeat: no-repeat;
-      mask-position: center;
-      mask-size: contain;
-      height: 40%;
-    }
-
-    &::after {
-      content: attr(not-found-msg);
-      font-size: clamp(15px, 4vw, 30px);
-      text-align: center;
-    }
-  }
-
 }
